# mplotutils

./: .pre-commit-config.yaml  CHANGELOG.md  LICENSE  README.md  pyproject.toml  pytest.ini  requirements.txt  setup.cfg  setup.py
.github/: PULL_REQUEST_TEMPLATE.md
.github/workflows/: ci-additional.yaml  ci.yaml  upstream-dev-ci.yaml
ci/: install-upstream-wheels.sh  min_deps_check.py
ci/requirements/: environment.yml  min-all-deps.yml  py37-min-all-deps.yml  py39-min-all-deps.yml
docs/: example.py  example_axes_grid.py  example_hatch.py  installation.md
licenses/: XARRAY_LICENSE
mplotutils/: __init__.py  _cartopy_utils.py  _colorbar.py  _colormaps.py  _deprecate.py  _hatch.py  _map_layout.py  _mpl.py  _savefig.py  _xrcompat.py  cartopy_utils.py  colorbar_utils.py  colormaps.py  map_layout.py  mpl.py  mpl_utils.py  test_infer_interval_breaks.py  version.py  xrcompat.py
mplotutils/test/: test_colorbar_utils.py  test_cyclic_dataarray.py  test_infer_interval_breaks.py  test_label_map.py  test_sample_data_3d.py  test_sample_data_map.py  test_set_map_layout.py
mplotutils/tests/: __init__.py  conftest.py  test_colorbar.py  test_colorbar_utils.py  test_colormap.py  test_cyclic_dataarray.py  test_deprecate.py  test_get_renderer.py  test_hatch.py  test_infer_interval_breaks.py  test_label_map.py  test_mapticklabels.py  test_maybe_gca.py  test_rename_modules.py  test_sample_data_map.py  test_savefig.py  test_set_map_layout.py  test_set_map_layout_axes_grid.py
