[project]
name = "mplotutils"
authors = [{name = "mplotutils developers", email = "mathias.hauser@env.ethz.com"}]
license = "GPL-3.0-only"
keywords = ['matplotlib cartopy plotting']
description = "utilities for matplotlib and cartopy"
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Operating System :: OS Independent",
    "Intended Audience :: Science/Research",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering",
    "Topic :: Scientific/Engineering :: Atmospheric Science",
    "Topic :: Scientific/Engineering :: GIS",
]
requires-python = ">=3.11"
dependencies = [
    "cartopy >=0.23",
    "matplotlib >=3.9",
    "packaging >= 23.1",
    "numpy >=1.26",
    "xarray >=2024.7",
]
dynamic = ["version"]

[project.readme]
file = "README.md"
content-type = "text/markdown"

[project.urls]
Homepage = "https://github.com/mpytools/mplotutils"
Documentation = "https://github.com/mpytools/mplotutils"
Source = "https://github.com/mpytools/mplotutils"
BugReports = "https://github.com/mpytools/mplotutils/issues"

[project.optional-dependencies]
full = [
  "seaborn",
]

[dependency-groups]
# docs = [
    # "mplotutils[full]",
    # dependencies to build the docs
    # "numpydoc",
    # "sphinx",
# ]
tests = [
    "pytest-cov",
    "pytest-xdist",
    "pytest",
]
dev = [
    "regionmask[full, tests]", # docs
    "black !=23",
    "ruff",
]

[tool.setuptools.packages]
find = {namespaces = false}  # Disable implicit namespaces

[build-system]
requires = [
    "setuptools>=42",
    "setuptools_scm>=7.0",
]
build-backend = "setuptools.build_meta"

[tool.setuptools_scm]
fallback_version = "999"
version_scheme = "no-guess-dev"


[tool.ruff]
# also check notebooks
extend-include = ["*.ipynb"]
target-version = "py310"

[tool.ruff.lint]
# E402: module level import not at top of file
# E501: line too long - let the formatter worry about this
# E731: do not assign a lambda expression, use a def
ignore = [
  "E402",
  "E501",
  "E731",
]
select = [
  "F", # Pyflakes
  "E", # Pycodestyle
  "W", # warnings
  "I", # isort
  "UP", # Pyupgrade
]

[tool.ruff.lint.isort]
known-first-party = ["mplotutils"]

[tool.pytest.ini_options]

log_cli_level = "INFO"

filterwarnings = [
    "ignore:numpy.ufunc size changed, may indicate binary incompatibility.:RuntimeWarning"
]

[tool.coverage.run]
omit = [
  "*/mplotutils/tests/*",
]
