[metadata]
name = mplotutils
description = utilities for matplotlib and cartopy
author = mathause
author_email = mathause@ethz.com
license = GPLv3
url = https://github.com/mathause/mplotutils
long_description_content_type=text/markdown
long_description = file: README.md
classifiers =
    Development Status :: 4 - Beta
    License :: OSI Approved :: GNU General Public License v3 (GPLv3)
    Operating System :: OS Independent
    Intended Audience :: Science/Research
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11

[options]
packages = find:
zip_safe = False  # https://mypy.readthedocs.io/en/latest/installed_packages.html
include_package_data = True
python_requires = >=3.7
install_requires =
    cartopy >= 0.17
    matplotlib >= 3.2
    numpy >= 1.17
    setuptools >= 40.4  # for pkg_resources

[tool:pytest]
filterwarnings =
    ignore:numpy.ufunc size changed, may indicate binary incompatibility.:RuntimeWarning

[flake8]
ignore=
    # E203: whitespace before ':' - doesn't work well with black
    # E402: module level import not at top of file
    # E501: line too long - let black worry about that
    # E731: do not assign a lambda expression, use a def
    # W503: line break before binary operator
    E203, E402, E501, E731, W503
exclude =
    build
    docs
    .git

[isort]
profile = black
known_first_party = mplotutils
