[metadata]
name = mplotutils
description = utilities for matplotlib and cartopy
author = mathause
author_email = mathias.hauser@env.ethz.com
license = GPLv3
url = https://github.com/mathause/mplotutils
long_description_content_type=text/markdown
long_description = file: README.md
classifiers =
    Development Status :: 4 - Beta
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Intended Audience :: Science/Research
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Programming Language :: Python :: 3.12

[options]
packages = find:
zip_safe = False  # https://mypy.readthedocs.io/en/latest/installed_packages.html
include_package_data = True
python_requires = >=3.9
install_requires =
    cartopy >= 0.18
    matplotlib >= 3.4
    numpy >= 1.17

[tool:pytest]
filterwarnings =
    ignore:numpy.ufunc size changed, may indicate binary incompatibility.:RuntimeWarning

[flake8]
ignore=
    # E203: whitespace before ':' - doesn't work well with black
    # E402: module level import not at top of file
    # E501: line too long - let black worry about that
    # E731: do not assign a lambda expression, use a def
    # W503: line break before binary operator
    E203, E402, E501, E731, W503
exclude =
    build
    docs
    .git

[isort]
profile = black
known_first_party = mplotutils

[coverage:run]
omit =
    */tests/*,
