[metadata]
name = mplotutils
description = utilities for matplotlib and cartopy
author = mathause
author_email = mathias.hauser@env.ethz.com
license = GPLv3
url = https://github.com/mpytools/mplotutils
long_description_content_type=text/markdown
long_description = file: README.md
classifiers =
    Development Status :: 4 - Beta
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Intended Audience :: Science/Research
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.11
    Programming Language :: Python :: 3.12
    Programming Language :: Python :: 3.13

[options]
packages = find:
zip_safe = False  # https://mypy.readthedocs.io/en/latest/installed_packages.html
include_package_data = True
python_requires = >=3.11
install_requires =
    cartopy >=0.23
    matplotlib >=3.9
    numpy >=1.26
    xarray >=2024.7

[coverage:run]
omit =
    */tests/*,
